--- a/build.xml
+++ b/build.xml
@@ -2,6 +2,7 @@
 
     <property name="main.build.dir" value="build/main"/>
     <property name="main.src.dir" value="."/>
+    <property name="doc.dir" value="apidoc"/>
 
     <path id="classpath.test">
       <pathelement location="lib/junit-4.12.jar"/>
@@ -9,12 +10,22 @@
       <pathelement location="${main.build.dir}"/>
     </path>
 
-    <target name="compile">
+    <target name="compile" depends="clean">
         <mkdir dir="${main.build.dir}"/>
         <javac destdir="${main.build.dir}" includeantruntime="false">
           <src path="${main.src.dir}"/>
           <classpath refid="classpath.test"/>
         </javac>
+        <antcall target="doc"/> <!--Go and run javadoc task next-->
+    </target>
+
+    <!-- Generate javadocs for current project into ${doc.dir} -->
+    <target name="doc" description="generate documentation">
+      <javadoc private="true" packagenames="src" sourcepath="${main.src.dir}" destdir="${doc.dir}">
+        <fileset dir="${main.src.dir}">
+          <include name="**/*.java" />
+        </fileset>
+      </javadoc>
     </target>
 
     <target name="test" depends="compile">
@@ -39,6 +50,19 @@
           <arg value="2"/>
           <arg value="3"/>
         </java>
+    </target>
+
+    <!-- clean up by removing all generated files; do "ant clean" to start afresh -->
+    <target name="clean">
+       <delete>
+         <fileset dir="${main.build.dir}">
+           <include name="**/*.*" />
+         </fileset>
+         <fileset dir="${doc.dir}">
+           <include name="**/*" />
+         </fileset>
+       </delete>
+       <delete dir="report" />
     </target>
 
 </project>
