--- a/build.xml
+++ b/build.xml
@@ -29,7 +29,7 @@
     </target>
 
     <target name="test" depends="compile">
-      <junit printsummary="on" haltonfailure="yes" fork="true">
+      <junit printsummary="on" haltonfailure="no" fork="true">
           <classpath>
             <path refid="classpath.test"/>
             <pathelement location="${main.build.dir}"/>
